fix alignment issue

--- a/contact.css
+++ b/contact.css
@@ -465,7 +465,7 @@ footer .wrapper {
         display: flex;
         flex-direction: column;
         gap: 15px;
-        align-items: center;
+        
     }
 
     .send-btn {
